# compiler

./: CMakeLists.txt  README.md  ast_str.c  ast_str.h  create_ast.y  lexer.l  lexer_ast.l  parser.y
Compilator/: AST.cpp  mainwindow.cpp
compiler2/: AST.cpp  AST.h  ast_str.cpp  compiler2.pro  lex.yy.cpp  main (1).cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
include/: ast_str.h  ast_test.h
src/: ast_str.cpp  ast_test.cpp
